Fix chatbot visibility toggle

--- a/frontend/mit-app/src/app/globals.css
+++ b/frontend/mit-app/src/app/globals.css
@@ -37,3 +37,12 @@
 .markdown hr {
     @apply my-5
 }
+
+#dify-chatbot-bubble-button {
+    background-color: #1C64F2 !important;
+}
+
+#dify-chatbot-bubble-window {
+    width: 24rem !important;
+    height: 40rem !important;
+}
